End of section 6

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,23 +1,26 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating App</a>
+    <a class="navbar-brand" routerLink='/' routerLinkActive='active'>Dating App</a>
 
-    <ul *ngIf="accountService.currentUser$ | async" class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
-      </li>
+    <ul class="navbar-nav mr-auto">
+      <ng-container *ngIf="accountService.currentUser$ | async" >
+        <!-- use conditionals in the ng-container -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/lists' routerLinkActive='active'>Lists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
+        </li>
+      </ng-container>
     </ul>
 
-    <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
+    <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
         <!-- async pipe auto-unsubscribes if our component is no longer visible or in use. -->
         <!-- With the pipe, we can avoid subscribing to a currentUser$ observable in the nav.component.ts file where we'd have to manually unsubscribe. -->
-        <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+        <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
@@ -38,7 +41,7 @@
             class="form-control mr-sm-2" 
             type="password" 
             placeholder="Password">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
   </div>
 </nav>
