--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,10 @@
-<app-nav></app-nav>>
+<div *ngIf="isLoading">
+    <div class="loader-overlay">
+        <div class="loader"></div>
+    </div>
+</div>
+
+<app-nav></app-nav>
 <div class="container" style="margin-top: 100px">
     <router-outlet></router-outlet>
 </div>
