--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i>
-            {{memberFromMemberCardComponent.knownAs}}
+            {{memberFromMemberCardComponent.knownAs}}, {{memberFromMemberCardComponent.age}}
         </h6>
         <p class="card-text text-muted text-center">{{memberFromMemberCardComponent.city}}</p>
     </div>
