--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -13,8 +13,10 @@
                 </button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary">
-                    <i class="fa fa-envelope"></i>
+                <button routerLink="/members/{{memberFromMemberCardComponent.username}}" 
+                    [queryParams]='{tab: 3}'
+                    class="btn btn-primary">
+                        <i class="fa fa-envelope"></i>
                 </button>
             </li>
         </ul>
