--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -14,6 +14,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
         </li>
+        <li class="nav-item" *appHasRole='["Admin", "Moderator"]'>
+          <a class="nav-link" routerLink='/admin' routerLinkActive='active'>Admin</a>
+        </li>
       </ng-container>
       <li class="nav-item">
         <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
@@ -24,7 +27,7 @@
         <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
         <!-- async pipe auto-unsubscribes if our component is no longer visible or in use. -->
         <!-- With the pipe, we can avoid subscribing to a currentUser$ observable in the nav.component.ts file where we'd have to manually unsubscribe. -->
-        <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.knownAs | titlecase}}</a>
+        <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.knownAs || user.username | titlecase}}</a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" routerLink='/member/edit'>Edit Profile</a>
             <div class="dropdown-divider"></div>
