--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -22,7 +22,10 @@
         </ul>
     </div>
     <div class="card-body p-1">
-        <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i>
+        <h6 class="card-title text-center mb-1">
+            <span [class.is-online]="(presence.onlineUsers$ | async).includes(memberFromMemberCardComponent.username)">
+                <i class="fa fa-user mr-2"></i>
+            </span>
             {{memberFromMemberCardComponent.knownAs}}, {{memberFromMemberCardComponent.age}}
         </h6>
         <p class="card-text text-muted text-center">{{memberFromMemberCardComponent.city}}</p>
