--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
-                    <button class="btn btn-primary">Like</button>
+                    <button class="btn btn-primary" (click)="addLike(member)">Like</button>
                     <button 
                         class="btn btn-success"
                         (click)="selectTab(3)">Message
