--- a/client/src/app/members/photo-editor/photo-editor.component.css
+++ b/client/src/app/members/photo-editor/photo-editor.component.css
@@ -11,3 +11,16 @@ img.img-thumnail {
 input[type=file] {
     color: transparent;
 }
+
+.not-approved {
+    opacity: 0.2;
+}
+
+.img-wrapper {
+    position: relative
+}
+
+.img-text {
+    position: absolute;
+    bottom: 30%;
+}
